--- a/template.html
+++ b/template.html
@@ -36,6 +36,7 @@
 <a href="http://www.twitter.com" target= "_blank">
 <img src="cat.jpg" title="My awesome cat" alt= "A cat with hat" width="300" />
 
-<li> 
+<li>
+  <p> Test </p> 
 
 </body>
