--- a/TaylorNakagawa1stsite/Index.html
+++ b/TaylorNakagawa1stsite/Index.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
+​
 <head>
+	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+</head>
+
  <title>Taylor Nakagawa</title>
  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 </head>
