--- a/TaylorNakagawa1stsite/Index.html
+++ b/TaylorNakagawa1stsite/Index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 </head>
-
+<head>
  <title>Taylor Nakagawa</title>
  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 </head>
