--- a/TaylorNakagawa1stsite/Index.html
+++ b/TaylorNakagawa1stsite/Index.html
@@ -8,23 +8,33 @@
 <head>
  <title>Taylor Nakagawa</title>
  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+ <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
 <body>
-
+<div id="container">
 <h1>Taylor Nakagawa</h1>
 <p>tkn8c8@mail.missouri.edu</p>
-<ul>
+
+
+  <h1>Welcome to my website</h1>
+  <p> Links to my twitter and wordpress</p>
+<ul id="nav">
 
 <li><a href="https://twitter.com/tnakagawa112" target="_blank">Twitter</a></li>
 <li><a href="https://taylornakagawa.wordpress.com/" target="_blank">Portfolio</a></li>
 <li><a href="index2.html" target="_blank">My Second Page</a></li>
 </ul>
+<div id=main>
 
 <p>What did the Tin Man say when he got run over by a steamroller?
 “Curses! Foil again!”</p>
 <a href="mailto:tkn8c8@mail.missouri.edu"><img src="TaylorNakagawa.jpg" title="Taylor Nakagawa" alt= "A photo of Taylor Nakagawa"/></a>
+</div>
+<div id="sidebar">
+<p><a href="Page2.html"target="blank"> My second page </a></p>
+</div>
 
-
+</div>
 
 </body>
